# nonowning-pointer

./: CMakeLists.txt
include/: nonowning-detail.hpp  nonowning.hpp  nonowningptr-detail.hpp  nonowningptr.hpp
test/: CMakeLists.txt  assert-tools.hpp  main.cpp  main11.cpp  status.hpp
